[package]
name = "reth-executor-example"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { version = "0.1.40", default-features = false }
cfg-if = "1.0.0"
spin = { version = "0.9.8", features = ["mutex"] }
async-trait = "0.1.80"
tokio = { version = "1.21", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }
reqwest = "0.12.9"
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false, features = ["derive"] }
futures = "0.3"
url = "2.3"
thiserror = "1.0.61"
hex-literal = "0.4.1"
rayon = "1.10.0"
rlp = "0.5.2"

# sp1
sp1-build = "5.1.0"
sp1-core-executor = { version = "5.1.0", features = ["bigint-rug"] }
sp1-prover = "5.1.0"
sp1-sdk = "5.1.0"

# reth
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false }
reth-evm = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false }
reth-trie = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false }
reth-errors = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false, features = ["serde"] }

# revm
revm = { version = "29.0.0", features = [
    "serde",
    "kzg-rs",
    "bn"
], default-features = false }
revm-bytecode = { version = "6.0.1", default-features = false }
revm-state = { version = "7.0.1", default-features = false }
revm-primitives = { version = "20.0.0", features = [
    "serde",
], default-features = false }
revm-interpreter = { version = "23.0.1", default-features = false }
revm-database = { version = "7.0.1", default-features = false }
revm-database-interface = { version = "7.0.1", default-features = false }

revm-inspectors = "0.27.1"

# alloy
alloy-chains = { version = "0.2.5", default-features = false }
alloy-evm = { version = "0.20.1", default-features = false }
alloy-primitives = { version = "1.3.0", default-features = false, features = ["sha3-keccak", "map-foldhash"] }
alloy-provider = { version = "1.0.27", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-rpc-types = { version = "1.0.27", default-features = false, features = [
    "eth",
] }
alloy-rpc-types-debug = { version = "1.0.27", default-features = false }

alloy-json-rpc = { version = "1.0.27", default-features = false }
alloy-genesis = { version = "1.0.27", default-features = false }
alloy-consensus = { version = "1.0.27", default-features = false, features = ["serde", "serde-bincode-compat"] }
alloy-network = { version = "1.0.27", default-features = false }
alloy-transport = { version = "1.0.27", default-features = false }
alloy-transport-http = { version = "1.0.27", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ws = { version = "1.0.27" }
alloy-rpc-client = { version = "1.0.27", default-features = false }
alloy-eips = { version = "1.0.27", default-features = false }
alloy-serde = "1.0.27"
alloy-rlp = "0.3.10"
alloy-trie = "0.9.0"

tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
clap = { version = "4.5.7", features = ["derive", "env"] }
eyre = "0.6.12"
strum = "0.26"
csv = "1.1"
env_logger = "0.11.8"
