[package]
name = "reth-executor-example"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
dotenv = "0.15.0"
env_logger = "0.11.8"
eyre = "0.6.12"
reqwest = "0.12"
serde = { version = "1.0", default-features = false, features = ["derive"] }
sp1-sdk = "5.1.0"
tokio = { version = "1.21", default-features = false, features = [
  "rt",
  "rt-multi-thread",
] }
tracing = { version = "0.1.40", default-features = false }
url = "2.3"

# alloy
alloy-consensus = { version = "1.0.30", default-features = false, features = [
  "serde",
  "serde-bincode-compat",
] }
alloy-network = { version = "1.0.30", default-features = false }
alloy-primitives = { version = "1.3.1", default-features = false, features = [
  "sha3-keccak",
  "map-foldhash",
] }
alloy-provider = { version = "1.0.30", default-features = false, features = [
  "reqwest",
  "reqwest-rustls-tls",
] }
alloy-rpc-client = { version = "1.0.30", default-features = false }
alloy-rpc-types = { version = "1.0.30", default-features = false, features = [
  "eth",
] }
alloy-transport = { version = "1.0.30", default-features = false }

# reth
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.7.0", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.7.0", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.7.0", default-features = false, features = [
  "serde",
] }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.7.0", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.7.0", default-features = false }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.7.0", default-features = false }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.7.0", default-features = false }

# revm
revm-database = { version = "7.0.1", default-features = false }
revm-database-interface = { version = "7.0.1", default-features = false }
revm-state = { version = "7.0.1", default-features = false }

# [patch.crates-io]
# revm = { path = "../revm/crates/revm" }
# revm-bytecode = { path = "../revm/crates/bytecode" }
# revm-context = { path = "../revm/crates/context" }
# revm-database = { path = "../revm/crates/database" }
# revm-database-interface = { path = "../revm/crates/database/interface" }
# revm-handler = { path = "../revm/crates/handler" }
# revm-inspector = { path = "../revm/crates/inspector" }
# revm-interpreter = { path = "../revm/crates/interpreter" }
# revm-precompile = { path = "../revm/crates/precompile" }
# revm-primitives = { path = "../revm/crates/primitives" }
# revm-state = { path = "../revm/crates/state" }
